[gd_scene load_steps=6 format=3 uid="uid://cmain"]

[ext_resource type="Script" path="res://scripts/wave_manager.gd" id="2_wave"]
[ext_resource type="Script" path="res://scripts/tower_placement.gd" id="3_placement"]
[ext_resource type="Script" path="res://scripts/main.gd" id="4_main"]
[ext_resource type="Resource" path="res://resources/maps/verdian_forest.tres" id="5_map"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_placement"]
size = Vector2(880, 720)

[node name="Main" type="Node2D"]
script = ExtResource("4_main")
map_data = ExtResource("5_map")

[node name="Background" type="TextureRect" parent="."]
offset_right = 880.0
offset_bottom = 720.0
expand_mode = 1
stretch_mode = 5

[node name="EnemyPath" type="Path2D" parent="."]

[node name="PathLine" type="Line2D" parent="EnemyPath"]
visible = false
width = 40.0
default_color = Color(0.6, 0.5, 0.3, 0.5)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("2_wave")
path = NodePath("../EnemyPath")

[node name="TowerPlacement" type="Node2D" parent="."]
script = ExtResource("3_placement")

[node name="TowersContainer" type="Node2D" parent="TowerPlacement"]

[node name="PlacementArea" type="Area2D" parent="TowerPlacement"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerPlacement/PlacementArea"]
position = Vector2(440, 360)
shape = SubResource("RectangleShape2D_placement")

[node name="PlacementZones" type="Node2D" parent="TowerPlacement"]